# hand

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/leap_hand/: right_hand.xml  scene_right.xml
assets/orca_hand/: LICENSE  scene_right.xml
assets/orca_hand/models/assets/: options.xml  scene.xml
assets/orca_hand/models/assets/right/: ForeArmStructure-Model.stl  ForeArmStructure-Model_Logo.stl  I-AP-R_AP.stl  I-FingerTipAssembly.stl  I-FingerTipAssembly_I-DP-Skin.stl  I-IP_IP.stl  I-PP.stl  I-PP_PP.stl  I-PP_Skin.stl  I-R-Assembly.stl  Logo.stl  M-AP_AP.stl  M-Assembly.stl  M-FingerTipAssembly_M-DP-Skin.stl  M-FingerTipAssembly_M-IP.stl  M-IP_IP.stl  M-PP.stl  M-PP_PP.stl  M-PP_Skin.stl  P-AP_AP.stl  P-FingerTipAssembly_P-DP-Skin.stl  P-FingerTipAssembly_P-IP.stl  P-IP_IP.stl  P-PP.stl  P-PP_PP.stl  P-PP_Skin.stl  R-Carpals_CORE.stl  R-Carpals_CarpalsTeeth.stl  R-Carpals_Skin.stl  R-T-AP.stl  T-DP.stl  T-DP_Skin.stl  T-DP_T-DP.stl  T-PP.stl  T-PP_PP.stl  T-PP_Skin.stl  T-TP-R.stl  TopTower-Model.stl
assets/orca_hand/models/mjcf/: orcahand_right.mjcf  orcahand_right_body.xml
hand_teleop/: __init__.py  anthro.py  hand_frame.py  hands.py  mirror.py  protocol.py  record.py  render.py  retarget.py  synthetic.py  tracker.py  wrist.py
tools/: get_model.py  smoke.py  smoke_wrist.py  test_pipeline.py
