[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-teleop"
version = "0.1.0"
description = "Markerless vision-based teleoperation of a simulated LEAP hand"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0",
    "mediapipe>=0.10",
    "opencv-python",
    "numpy",
]

[tool.setuptools]
packages = ["hand_teleop"]
